--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@
 
  }
  body{
-    background-color: rgb(60, 63, 73);
+    background-color: #eae5d0(60, 63, 73);
     max-width: 100%;
     min-height: 100vh;
     display: flex;
@@ -23,11 +23,13 @@
    
 }
  img{
-   height: 150px;
+   
+   height: 300px;
    max-width: 100%;
    /* margin-right: 1.5%; */
    
  }
+
 
 .login{
    border-radius: 60px;
@@ -37,7 +39,7 @@
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
-   align-items: center;
+   /* align-items: center; */
    margin-bottom: 30px;
    margin-left: 15px;
    margin-right: 15px;
@@ -48,7 +50,7 @@
    /* border: solid; */
    width: 100%;
    text-align: center;
-   margin-top: 5%;
+   /* margin-top: 5%; */
    font-family: 'Sixtyfour', sans-serif;
    color: #ffcd4e;
    height: 40px;
@@ -87,7 +89,7 @@ input::placeholder{
 }
 
 
-.container {
+.container1 {
    margin-top: 30px
    
  }
@@ -112,3 +114,5 @@ input::placeholder{
  .btn-1 {
    background-image: linear-gradient(to right, #659af6 0%, #e185fd 51%, #c365f6 100%);
  }
+
+ 
