--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@
 
  }
  body{
-    background-color: #eae5d0(60, 63, 73);
+    background-color: #021b0ad7;
     max-width: 100%;
     min-height: 100vh;
     display: flex;
@@ -28,17 +28,19 @@
    max-width: 100%;
    /* margin-right: 1.5%; */
    
+   
  }
 
 
 .login{
    border-radius: 60px;
    border: solid white;
-   min-height: 600px;
-   min-width: 400px;
+   min-height:  70%;
+   min-width: 60%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
+   align-items: center;
    /* align-items: center; */
    margin-bottom: 30px;
    margin-left: 15px;
@@ -54,6 +56,7 @@
    font-family: 'Sixtyfour', sans-serif;
    color: #ffcd4e;
    height: 40px;
+   padding-top: 7%;
 }
 
 .container{
@@ -81,6 +84,7 @@
    background-color: rgb(0, 0, 0);
    border: 0px;
    margin: 10px;
+   color: white;
 }
 
 input::placeholder{
@@ -112,7 +116,7 @@ input::placeholder{
  }
  
  .btn-1 {
-   background-image: linear-gradient(to right, #659af6 0%, #e185fd 51%, #c365f6 100%);
+   background-image: linear-gradient(to right, #ffcd4e 0%, #565e3a 51%, #2a5e35 100%);
  }
 
  
